UnSave blog functionality bug fixed and added ui validation.